style.css
/* ... */
body label.menu .info {
  position: relative;
  left: 50px;
  top: 1px;
}
body label.menu h2,
body label.menu h3 {
  text-transform: uppercase;
  margin: 0;
  font-weight: 100;
  letter-spacing: 2px;
}
body label.menu h2 {
  font-size: 11px;
  opacity: 0.4;
  margin-bottom: 4px;
}
body label.menu h2 .pip {
  width: 0;
  height: 9px;
  background: #fea082;
  float: left;
  position: relative;
  top: 3px;
  transition: all 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  margin-right: 0px;
}
body label.menu h3 {
  font-size: 8px;
  letter-spacing: 1px;
  transition: all 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  opacity: 0.3;
}
body label.menu:nth-of-type(1) {
  top: calc(50vh + 100px + ((14px + 34px) * 1) + 0px - 369px);
}
body label.menu:nth-of-type(2) {
  top: calc(50vh + 100px + ((14px + 34px) * 2) + 0px - 369px);
}
body label.menu:nth-of-type(3) {
  top: calc(50vh + 100px + ((14px + 34px) * 3) + 0px - 369px);
}
body label.menu:nth-of-type(4) {
  top: calc(50vh + 100px + ((14px + 34px) * 4) + 0px - 369px);
}
body label.menu:nth-of-type(5) {
  top: calc(50vh + 100px + ((14px + 34px) * 5) + 0px - 369px);
}
body label.menu:nth-of-type(6) {
  top: calc(50vh + 100px + ((14px + 34px) * 6) + 0px - 369px);
}
body label.menu:nth-of-type(7) {
  top: calc(50vh + 100px + ((14px + 34px) * 7) + 0px - 369px);
}
body label.menu:nth-of-type(8) {
  top: calc(50vh + 100px + ((14px + 34px) * 8) + 0px - 369px);
}
body label.menu:nth-of-type(9) {
  top: calc(50vh + 100px + ((14px + 34px) * 9) + 0px - 369px);
}
body input.read {
  display: none;
}
body .read:checked + label + input + .panel {
  right: 0;
}
body .read:checked + label {
  width: calc(100% - 420px);
}
body .read:checked + label::after {
  opacity: 1;
  left: 0;
}
body .read:checked + label + label {
  transition: all 0.3s 0.6s;
  opacity: 1;
}
body .read:not(:checked) + label + label {
  transition: all 0.3s 0s;
  opacity: 0;
}
body label.close {
  position: absolute;
  right: 60px;
  opacity: 0;
  transition: all 0.3s 0.4s;
  z-index: 3;
  top: 65px;
}
body label.closeBig {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 3;
  height: 100vh;
  transition: all 0.2s;
  z-index: 10;
  width: 0;
  background: rgba(56, 37, 99, 0.38);
}
body label.closeBig::after {
  content: "Back";
  text-align: center;
  font-size: 30px;
  color: white;
  position: absolute;
  left: -140px;
  opacity: 0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}
body .overlay {
  border-bottom: 1020px solid black;
  width: 1800px;
  height: 620px;
  top: auto;
  -webkit-transform: none;
  transform: none;
  top: -240px;
  left: -303px;
  opacity: 1;
  border-radius: 100%;
  z-index: 0;
  box-shadow: 0px -190px 215px 110px black inset;
}
body input[type=radio][name=planet] {
  appearance: none;
}
body input[type=radio][name=planet]::after {
  content: "";
}
body input[type=radio][name=planet].planet1:checked::after {
  display: none;
}
body input[type=radio][name=planet].planet1:checked + label + input::after {
  display: none;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) {
  pointer-events: all;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet {
  transform: translateZ(0px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: 2;
  animation: planet 60s 3.9s infinite linear;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet_description {
  opacity: 1;
  transition: all 1s 2.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet_description h2,
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet_description h1 {
  position: relative;
  top: 0px;
  transition: all 0.5s 3s;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet_description p,
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet_description a {
  transition: all 1s 3.5s, padding 0.3s 0s;
  opacity: 1;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet .moon {
  opacity: 1;
  transition: all 1s 3.2s;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet .trajectory {
  opacity: 0.2;
  transition: all 0.6s 2.9s;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(1) .planet .overlay {
  opacity: 1;
  top: -240px;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(2) .planet {
  transform: translateZ(-2300px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: 1;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(3) .planet {
  transform: translateZ(-4600px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: 0;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(4) .planet {
  transform: translateZ(-6900px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: -1;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(5) .planet {
  transform: translateZ(-9200px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: -2;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(6) .planet {
  transform: translateZ(-11500px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: -3;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(7) .planet {
  transform: translateZ(-13800px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: -4;
}
body input[type=radio][name=planet].planet1:checked + label + div .solar_systm:nth-of-type(8) .planet {
  transform: translateZ(-16100px) translateY(0) rotatex(4deg) scaleX(0.89);
  opacity: -5;
}
/* ... */

